[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MovesLabel.gd" type="Script" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Target.tscn" type="PackedScene" id=5]
[ext_resource path="res://Progress.gd" type="Script" id=6]
[ext_resource path="res://Block.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://level.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=7]
size = 1024
extra_spacing_char = -187
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="Environment" id=9]
background_mode = 4

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 4 )
target_scene = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="level" type="Label" parent="CanvasLayer"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -230.0
margin_right = -6.0
margin_bottom = -950.0
rect_scale = Vector2( 1, 2 )
theme = SubResource( 8 )
custom_colors/font_color = Color( 0.411765, 0.411765, 0.411765, 1 )
text = "10"
align = 1
script = ExtResource( 9 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="Ground" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="Block" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Block2" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="Block3" parent="Ground" instance=ExtResource( 7 )]

[node name="Block4" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="Block5" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="Block6" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -2 )

[node name="Block7" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2 )

[node name="Block8" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Block9" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2 )

[node name="Block10" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2 )

[node name="Block11" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4 )

[node name="Block12" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -4 )

[node name="Block13" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="Block14" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -4 )

[node name="Block15" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4 )

[node name="Block16" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 2 )

[node name="Block17" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2 )

[node name="Block18" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="Block19" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2 )

[node name="Block20" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2 )

[node name="Block21" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4 )

[node name="Block22" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 4 )

[node name="Block23" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="Block24" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4 )

[node name="Block25" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.410082, 0.516262, 0.751868, -0.912049, 0.232126, 0.338061, 0, -0.824373, 0.566047, 6.98924, 22.2052, 14.5841 )
light_color = Color( 1, 0, 0.188235, 1 )
shadow_enabled = true

[node name="Position3D" type="Position3D" parent="."]

[node name="Camera" type="Camera" parent="Position3D"]
transform = Transform( 0.912056, -0.256983, 0.319553, -0.0891389, 0.636392, 0.766198, -0.400261, -0.7273, 0.557518, 3.82521, 11.3919, 7.72373 )
fov = 81.2

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2 )

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="MovesLabel" type="Label" parent="UserInterface"]
margin_left = 13.0
margin_top = 14.0
margin_right = 147.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "Moves: 0"
script = ExtResource( 3 )

[node name="Progress" type="Label" parent="UserInterface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -363.0
margin_top = 14.0
margin_right = -22.0
margin_bottom = 132.0
theme = SubResource( 4 )
text = "0%"
align = 2
script = ExtResource( 6 )

[node name="Retry" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.619608 )

[node name="Label" type="Label" parent="UserInterface/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.5
margin_top = -119.5
margin_right = 433.5
margin_bottom = 119.5
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.309804, 0.709804, 1, 1 )
text = "You died
press enter to retry"
align = 1

[node name="Win" type="ColorRect" parent="UserInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.619608 )

[node name="Label" type="Label" parent="UserInterface/Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.5
margin_top = -119.5
margin_right = 508.5
margin_bottom = 119.5
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.309804, 1, 0.498039, 1 )
text = "You won!
press enter to proceed"
align = 1

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.50457, 4.38474, 4.52093 )
light_energy = 1.367
light_indirect_energy = 2.0
omni_range = 14.142
omni_attenuation = 0.378929

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="moved" from="Player" to="UserInterface/MovesLabel" method="_on_Player_moved"]
[connection signal="win" from="UserInterface/Progress" to="." method="_on_Progress_win"]
